crates/runtime/src/http/v1/snapshots/runtime__http__v1__tests__vnd_json_v1_without_sql.snap
---
source: crates/runtime/src/http/v1/mod.rs
expression: "serde_json::from_str::<serde_json::Value>(&result_without_sql).unwrap()"
---
{
  "data": [
    {
      "customer_id": "12345",
      "total_sales": 150000
    },
    {
      "customer_id": "67890",
      "total_sales": 125000
    }
  ]
}
